@@ -8,15 +8,19 @@ import jaega.homecare.domain.settlement.entity.Settlement;
 import jaega.homecare.domain.settlement.mapper.SettlementMapper;
 import jaega.homecare.domain.settlement.repository.SettlementQueryRepository;
 import jaega.homecare.domain.settlement.repository.SettlementRepository;
+import jaega.homecare.domain.users.entity.DateFilter;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
+import java.time.DayOfWeek;
+import java.time.Duration;
 import java.time.LocalDate;
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -95,27 +99,82 @@ public class SettlementQueryService {
     }
 
 
-    public List<GetCaregiverCenterSettlementResponse> getSettlementHistoryByCaregiver(UUID caregiverId) {
-        // 1. caregiverId로 소속 기관 조회
-        List<CaregiverCenter> caregiverCenters = caregiverCenterRepository.findByCaregiver_CaregiverId(caregiverId);
+    public List<GetCaregiverSettlementResponse> getSettlementHistoryByCaregiver(
+            UUID caregiverId,
+            DateFilter dateFilter,
+            Boolean isPaidFilter
+    ) {
+        List<CaregiverCenter> caregiverCenters =
+                caregiverCenterRepository.findByCaregiver_CaregiverId(caregiverId);
 
         if (caregiverCenters.isEmpty()) {
             return Collections.emptyList();
         }
 
-        // 2. 각 기관별로 Settlement 조회 후 그룹핑
+        LocalDate now = LocalDate.now();
+        final LocalDate startDate;
+        final LocalDate endDate;
+
+        switch (dateFilter) {
+            case THIS_WEEK -> {
+                startDate = now.with(DayOfWeek.MONDAY);
+                endDate = now.with(DayOfWeek.SUNDAY);
+            }
+            case THIS_MONTH -> {
+                startDate = now.withDayOfMonth(1);
+                endDate = now.withDayOfMonth(now.lengthOfMonth());
+            }
+            case LAST_MONTH -> {
+                LocalDate lastMonth = now.minusMonths(1);
+                startDate = lastMonth.withDayOfMonth(1);
+                endDate = lastMonth.withDayOfMonth(lastMonth.lengthOfMonth());
+            }
+            default -> {
+                startDate = null;
+                endDate = null;
+            }
+        }
+
         return caregiverCenters.stream()
                 .map(caregiverCenter -> {
-                    List<Settlement> settlements = settlementRepository.findByCaregiverCenter(caregiverCenter);
+                    // QueryDSL로 필터링된 Settlement 조회
+                    List<Settlement> settlements = settlementQueryRepository
+                            .findByCaregiverCenterWithFilters(caregiverCenter, startDate, endDate, isPaidFilter);
 
-                    List<GetSettlementByCaregiverResponse> settlementDtos = settlementMapper.toDtoList(settlements);
+                    // 디테일 매핑
+                    List<GetCaregiverSettlementDetailDto> details = settlements.stream()
+                            .map(s -> new GetCaregiverSettlementDetailDto(
+                                    s.getServiceMatch().getServiceDate(),
+                                    s.getServiceMatch().getServiceStartTime(),
+                                    s.getServiceMatch().getServiceEndTime(),
+                                    s.getDistanceLog(),
+                                    s.getSettlementAmount(),
+                                    s.isPaid()
+                            ))
+                            .collect(Collectors.toList());
 
-                    return new GetCaregiverCenterSettlementResponse(
+                    // 총합 계산
+                    Integer totalCount = details.size();
+                    Long totalHours = details.stream()
+                            .mapToLong(d -> Duration.between(d.serviceStartTime(), d.serviceEndTime()).toHours())
+                            .sum();
+                    Long totalDistanceLog = details.stream()
+                            .mapToLong(d -> d.distanceLog() != null ? d.distanceLog().longValue() : 0L)
+                            .sum();
+                    BigDecimal totalSettlementAmount = details.stream()
+                            .map(GetCaregiverSettlementDetailDto::settlementAmount)
+                            .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+                    return new GetCaregiverSettlementResponse(
                             caregiverCenter.getCenter().getName(),
-                            settlementDtos
+                            totalCount,
+                            totalHours,
+                            totalDistanceLog,
+                            totalSettlementAmount,
+                            details
                     );
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
